# hydrophonitor-cli

./: Cargo.toml  LICENSE
cli/: Cargo.toml
cli/src/: clean.rs  connect.rs  disconnect.rs  flash.rs  import.rs  info.rs  main.rs
docs/: requirements.md
lib/: Cargo.toml
lib/src/: clean.rs  connect.rs  device_type.rs  flash.rs  import.rs  lib.rs
lib/src/domain/: deployment.rs  device.rs  mod.rs  output.rs  timestamp.rs
lib/src/domain/files/: audio_file.rs  depth_file.rs  gps_file.rs  log_file.rs  mod.rs  timestamped_file.rs
src/: clean.rs  connect.rs  disconnect.rs  import.rs  logging.rs  main.rs
