[workspace]

members = [
    "cli",
    "lib",
]

[workspace.dependencies]
anyhow = "1.0.70"
clap = { version = "4.4.11", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
chrono = "0.4.31"
dialoguer = "0.11.0"
env_logger = "0.10.1"
hound = "3.5.0"
indicatif = "0.17.3"
log = "0.4"
nonempty = "0.9.0"
regex = "1.10.2"
walkdir = "2.3.3"
