[package]
name = "hydrophonitor-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dirs.workspace = true
hound.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
log.workspace = true
sys-mount.wokspace = true
walkdir.workspace = true
